vr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
    - route:
      - destination:
          host: myapp.openshift-config.svc.cluster.local
          subset: v1
        weight: 10
      - destination:
          host: myapp.openshift-config.svc.cluster.local
          subset: v2
        weight: 90
